Easy DI working example